2006-03-06  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/markup-tree.c: (parse_tree): Free the parse context in
	some more cases. Fixes bug #332528.

2006-03-06  Mark McLoughlin  <mark@skynet.ie>

	Based on patch from Josselin Mouette <joss@debian.org>
	in bug #333353 to speed up the install of multiple
	schem files

	* gconf/gconftool.c: 
	(do_load_file): split do_sync() out of here
	(main), (do_makefile_install): call do_sync()
	after calling do_load_file()

2006-03-06  Mark McLoughlin  <mark@skynet.ie>

	Patch from Christopher.Hanna@sun.com

	* doc/gconftool-2.1: improved man page

2006-02-17  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* gconf/gconf-value.c: (gconf_value_new), (gconf_value_free),
	(gconf_entry_new_nocopy), (gconf_entry_unref): Use new g_slice API.

2006-01-28  Benoît Dejean  <benoit@placenet.org>

	* gconf/gconf-schema.c:
	* gconf/gconf-value.c: Got rid of padding members in private structs.

2006-01-27  Tor Lillqvist  <tml@novell.com>

	* gconf-zip.in: Include backend DLLs only in the runtime zipfile.

	* gconf/gconfd.c (main): Don't call closelog() unless we HAVE_SYSLOG_H.

2006-01-15  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.13.6.
	
==================== 2.13.5 ====================

2006-01-15  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.13.5.

2006-01-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* backends/Makefile.am:
	  don't use top_builddir to link in library from current directory;
	  fixes parallel make

2006-01-05  Vincent Untz  <vuntz@gnome.org>

	* gconf/gconf-client.c: (clear_dir_cache_foreach): new, clears a cache
	entry if it matches the directory
	(gconf_client_real_remove_dir): remove from cache all entries that are
	in this directory
	Fix bug #127285.

2006-01-05  Tor Lillqvist  <tml@novell.com>

	* gconf-zip.in: Include the backend DLLs in the runtime zipfile.

2006-01-03  Mark McLoughlin  <mark@skynet.ie>
