@@ -1,3 +1,9 @@
+2006-03-10  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* backends/markup-tree.c: (parse_tree): Patch from
+	Matthias Clasen to fix my leak fix to not crash.
+	Closes bug #334047.
+
 2006-03-06  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* backends/markup-tree.c: (parse_tree): Free the parse context in
